--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_transaction_details/f_npss_process_log_srch/f_npss_process_log_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_transaction_details/f_npss_process_log_srch/f_npss_process_log_srch.component.html
@@ -2,20 +2,50 @@
 	
 <fieldset [disabled]="isFormDisabled()" [hidden]="isFormHidden()">
 	<h2 class="need-header" [hidden]="hasHeader">{{component_header | translate}}</h2>	<form #f_npss_process_log_srch="ngForm">
-<div id="RN01" class="row">
-	<div #npss_process_log_srch_uetr id="RN01CN1" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('uetr')" >
-				<cdn_ctrl [ctrl_id]="'npss_process_log_srch_uetr'" [comp_id]="comp_id" [ctrl]="ctrl.uetr" [model]="screen_instance[this.comp_id].f_npss_process_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
+<div id="RN31" class="row">
+	<div #npss_process_log_srch_memory18 id="RN31CN8" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory18')" >
+				<cdn_date [ctrl_id]="'npss_process_log_srch_memory18'" [comp_id]="comp_id" [ctrl]="ctrl.memory18" [model]="screen_instance[this.comp_id].f_npss_process_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_date>
 	</div>
-	<div  id="RN01CN2" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('process_name')" >
-				<cbo [ctrl_id]="'npss_process_log_srch_process_name'" [comp_id]="comp_id" [ctrl]="ctrl.process_name" [model]="screen_instance[this.comp_id].f_npss_process_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cbo>
+	<div  id="RN31CN9" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory9')" >
+				<cdn_date [ctrl_id]="'npss_process_log_srch_memory9'" [comp_id]="comp_id" [ctrl]="ctrl.memory9" [model]="screen_instance[this.comp_id].f_npss_process_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_date>
+	</div>
+</div>
+<div id="RN21" class="row">
+	<div  id="RN21CN5" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory19')" >
+				<txt [ctrl_id]="'npss_process_log_srch_memory19'" [comp_id]="comp_id" [ctrl]="ctrl.memory19" [model]="screen_instance[this.comp_id].f_npss_process_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+	</div>
+	<div  id="RN01CN1" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('uetr')" >
+				<txt [ctrl_id]="'npss_process_log_srch_uetr'" [comp_id]="comp_id" [ctrl]="ctrl.uetr" [model]="screen_instance[this.comp_id].f_npss_process_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+	</div>
+	<div  id="RN21CN7" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory20')" >
+				<cbo [ctrl_id]="'npss_process_log_srch_memory20'" [comp_id]="comp_id" [ctrl]="ctrl.memory20" [model]="screen_instance[this.comp_id].f_npss_process_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cbo>
+	</div>
+</div>
+<div id="RN01" class="row">
+	<div  id="RN21CN6" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory21')" >
+				<txt [ctrl_id]="'npss_process_log_srch_memory21'" [comp_id]="comp_id" [ctrl]="ctrl.memory21" [model]="screen_instance[this.comp_id].f_npss_process_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+	</div>
+	<div  id="RN01CN10" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory22')" >
+				<txt [ctrl_id]="'npss_process_log_srch_memory22'" [comp_id]="comp_id" [ctrl]="ctrl.memory22" [model]="screen_instance[this.comp_id].f_npss_process_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+	</div>
+	<div  id="RN01CN11" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory23')" >
+				<txt [ctrl_id]="'npss_process_log_srch_memory23'" [comp_id]="comp_id" [ctrl]="ctrl.memory23" [model]="screen_instance[this.comp_id].f_npss_process_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+	</div>
+</div>
+<div id="RN41" class="row">
+	<div  id="RN41CN13" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory24')" >
+				<txt [ctrl_id]="'npss_process_log_srch_memory24'" [comp_id]="comp_id" [ctrl]="ctrl.memory24" [model]="screen_instance[this.comp_id].f_npss_process_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+	</div>
+	<div  id="RN41CN14" class="column col-md-8 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory25')" >
+				<cdn_cur_ctrl [ctrl_id]="'npss_process_log_srch_memory25'" [comp_id]="comp_id" [ctrl]="ctrl.memory25" [model]="screen_instance[this.comp_id].f_npss_process_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_cur_ctrl>
 	</div>
 </div>
 <div id="RN11" class="row">
-	<div  id="RN11CN3" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('processing_system')" >
-				<cdn_ctrl [ctrl_id]="'npss_process_log_srch_processing_system'" [comp_id]="comp_id" [ctrl]="ctrl.processing_system" [model]="screen_instance[this.comp_id].f_npss_process_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
+	<div  id="RN01CN2" class="column col-md-4 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('process_name')" >
+				<cbo [ctrl_id]="'npss_process_log_srch_process_name'" [comp_id]="comp_id" [ctrl]="ctrl.process_name" [model]="screen_instance[this.comp_id].f_npss_process_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cbo>
 	</div>
-	<div  id="RN11CN4" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory9')" >
-				<cdn_date [ctrl_id]="'npss_process_log_srch_memory9'" [comp_id]="comp_id" [ctrl]="ctrl.memory9" [model]="screen_instance[this.comp_id].f_npss_process_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_date>
+	<div  id="RN11CN3" class="column col-md-8 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('processing_system')" >
+				<cdn_ctrl [ctrl_id]="'npss_process_log_srch_processing_system'" [comp_id]="comp_id" [ctrl]="ctrl.processing_system" [model]="screen_instance[this.comp_id].f_npss_process_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
 </div>
 	</form>
