--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_bct_review_transactions/s_bct_review_transactions.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_bct_review_transactions/s_bct_review_transactions.component.html
@@ -1,4 +1,5 @@
 <div class="s_bct_review_transactions">
+<p_view_req_and_res_layout [screen_instance]="this" [hidden]="!(current_profile=='p_view_req_and_res_layout')"></p_view_req_and_res_layout>
 <p_view_history_layout [screen_instance]="this" [hidden]="!(current_profile=='p_view_history_layout')"></p_view_history_layout>
 <p_view_request_layout [screen_instance]="this" [hidden]="!(current_profile=='p_view_request_layout')"></p_view_request_layout>
 <p_view_response_layout [screen_instance]="this" [hidden]="!(current_profile=='p_view_response_layout')"></p_view_response_layout>
