--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_process_logs/p_main_layout/p_main_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_process_logs/p_main_layout/p_main_layout.component.html
@@ -8,12 +8,14 @@
 	</div>
 </div>
 <div id="R21" class="row">
-	<div id="R21C1" class="column col-md-4 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+	<div id="R21C1" class="column col-md-8 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="queue"  [hidden]="!screen_instance['queue'].show" >
 			<datatable [comp_id]="'queue'" [screen_instance]="screen_instance" profile_name="p_main_layout"></datatable>
 		</div>
 	</div>
-	<div id="R21C2" class="column col-md-8 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+</div>
+<div id="R31" class="row">
+	<div id="R31C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="process_log_list"  [hidden]="!screen_instance['process_log_list'].show" >
 			<datatable [comp_id]="'process_log_list'" [screen_instance]="screen_instance" profile_name="p_main_layout"></datatable>
 		</div>
