--- a/frontend/wp_ng9/custom_widget/npss_cs_show_table_view/npss_cs_show_table_view.component.html
+++ b/frontend/wp_ng9/custom_widget/npss_cs_show_table_view/npss_cs_show_table_view.component.html
@@ -1,1 +1,18 @@
 <!--HTML FILE-->
+<!--HTML FILE-->
+<p-table [columns]="tableheader" [value]="tablerows" [tableStyle]="{'min-width': '50rem'}">
+    <ng-template pTemplate="header" let-columns>
+        <tr>
+            <th *ngFor="let col of columns">
+                {{col.headers}}
+            </th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-rowData let-columns="columns">
+        <tr>
+            <td *ngFor="let col of columns">
+                {{rowData[col.headers]}}
+            </td>
+        </tr>
+    </ng-template>
+</p-table>
