--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal/s_rct_reversal.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal/s_rct_reversal.component.html
@@ -15,7 +15,7 @@
 <p-dialog header="{{'Change Return Reason' | translate }}"  [closable]="true" (onHide)="closePopup()" responsive="true" breakpoint=600 styleClass="show-popup " [(visible)]="p_change_return_layout__crr_for_spap_showpopup" [contentStyle]="{'overflow-y': 'auto','height': '300px','width': '600px'}" [draggable]="true" [modal]="true">
 	<p_change_return_layout [screen_instance]="this" ></p_change_return_layout></p-dialog>
 
-<p-dialog header="{{'Error Details' | translate }}"  [closable]="true" (onHide)="closePopup()" responsive="true" breakpoint=600 styleClass="show-popup " [(visible)]="p_remarks_layout__spap_for_error_code_showpopup" [contentStyle]="{'overflow-y': 'auto','height': '300px','width': '600px'}" [draggable]="true" [modal]="true">
+<p-dialog header="{{'Remark Details' | translate }}"  [closable]="true" (onHide)="closePopup()" responsive="true" breakpoint=600 styleClass="show-popup " [(visible)]="p_remarks_layout__spap_for_error_code_showpopup" [contentStyle]="{'overflow-y': 'auto','height': '300px','width': '600px'}" [draggable]="true" [modal]="true">
 	<p_remarks_layout [screen_instance]="this" ></p_remarks_layout></p-dialog>
 <app-dialog [screen_instance]="this" ></app-dialog>
 <div style="display:none">
