--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal_non_aed/p_accept_ui_layout/p_accept_ui_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal_non_aed/p_accept_ui_layout/p_accept_ui_layout.component.html
@@ -10,7 +10,7 @@
 <div id="R31" class="row">
 	<div id="R31C1" class="column col-md-10 col-sm-6 col-xs-6 col-md-offset-1 col-sm-offset-0 col-xs-offset-0" >
 		<div class="process_log_control_ui" >
-			<f_process_log_control_ui [comp_id]="'process_log_control_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('process_log_control_ui','f_process_log_control_ui')" profile_name="p_accept_ui_layout"></f_process_log_control_ui >
+			<f_npss_reversal_plog_ui [comp_id]="'process_log_control_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('process_log_control_ui','f_npss_reversal_plog_ui')" profile_name="p_accept_ui_layout"></f_npss_reversal_plog_ui >
 		</div>
 	</div>
 </div>
