--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal/s_rct_reversal.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal/s_rct_reversal.component.html
@@ -20,5 +20,6 @@
 <app-dialog [screen_instance]="this" ></app-dialog>
 <div style="display:none">
 	<datatable [comp_id]="'comment_list'" [screen_instance]="this"></datatable>
+	<f_trig_action_for_list_ui [comp_id]="'trig_action_for_list_ui'" [screen_instance]="this" ></f_trig_action_for_list_ui >
 </div>
 </div>
