--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_op_rct_posting_failure/f_navigation_ui/f_navigation_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_op_rct_posting_failure/f_navigation_ui/f_navigation_ui.component.html
@@ -10,6 +10,7 @@
 		<btn [ctrl_id]="'navigation_ui_repost'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_repost" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_repost.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_already_posted'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_already_posted" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_already_posted.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_force_post'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_force_post" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_force_post.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_send_to_maker'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_send_to_maker" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_send_to_maker.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_trg_btn'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_trg_btn" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_trg_btn.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_sec_trg_btn'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_sec_trg_btn" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_sec_trg_btn.show"></btn>
  	</div>
