--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_op_rct_posting_failure/s_op_rct_posting_failure.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_op_rct_posting_failure/s_op_rct_posting_failure.component.html
@@ -13,6 +13,9 @@
 
 <p-dialog header="{{'' | translate }}"  [closable]="true" (onHide)="closePopup()" responsive="true" breakpoint=600 styleClass="show-popup " [(visible)]="p_cbs_layout__e_1679517072428_showpopup" [contentStyle]="{'overflow-y': 'auto','height': '170px','width': '600px'}" [draggable]="true" [modal]="true">
 	<p_cbs_layout [screen_instance]="this" ></p_cbs_layout></p-dialog>
+
+<p-dialog header="{{'' | translate }}"  [closable]="true" (onHide)="closePopup()" responsive="true" breakpoint=600 styleClass="show-popup " [(visible)]="p_send_to_maker_layout__spap_for_send_to_maker_btn_showpopup" [contentStyle]="{'overflow-y': 'auto','height': '170px','width': '600px'}" [draggable]="true" [modal]="true">
+	<p_send_to_maker_layout [screen_instance]="this" ></p_send_to_maker_layout></p-dialog>
 <app-dialog [screen_instance]="this" ></app-dialog>
 <div style="display:none">
 	<datatable [comp_id]="'process_log_list'" [screen_instance]="this"></datatable>
