--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_daily_liquidity_position/p_main_layout/p_main_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_daily_liquidity_position/p_main_layout/p_main_layout.component.html
@@ -6,8 +6,8 @@
 	<div id="R11C1R0C2" class="column col-md-4 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 <div id="R11C1R0C2R0" class="row">
 	<div id="R11C1R0C2R0C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
-		<div class="api_details" >
-			<f_npss_daily_liq_pos_ui [comp_id]="'api_details'" [screen_instance]="screen_instance" [hidden]="isHidden('api_details','f_npss_daily_liq_pos_ui')" profile_name="p_main_layout"></f_npss_daily_liq_pos_ui >
+		<div class="input_details" >
+			<f_npss_daily_liq_pos_ui [comp_id]="'input_details'" [screen_instance]="screen_instance" [hidden]="isHidden('input_details','f_npss_daily_liq_pos_ui')" profile_name="p_main_layout"></f_npss_daily_liq_pos_ui >
 		</div>
 	</div>
 	<div id="R11C1R0C2R0C2" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
