--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_op_transactions/p_view_api_failure_layout/p_view_api_failure_layout.component.css
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_op_transactions/p_view_api_failure_layout/p_view_api_failure_layout.component.css
@@ -1,2 +1,2 @@
 /* CSS */
-:host ::ng-deep .view_api_failure_ui .row.dynamic_action_btn .btn { float: right; }
+:host ::ng-deep .view_api_failure__action_ui .row.dynamic_action_btn .btn { float: right; }
