--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_op_transactions/p_view_api_failure_layout/p_view_api_failure_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_op_transactions/p_view_api_failure_layout/p_view_api_failure_layout.component.html
@@ -8,7 +8,12 @@
 	</div>
 </div>
 <div id="R21" class="row">
-	<div id="R21C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+	<div id="R21C1" class="column col-md-4 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="api_queue"  [hidden]="!screen_instance['api_queue'].show" >
+			<datatable [comp_id]="'api_queue'" [screen_instance]="screen_instance" profile_name="p_view_api_failure_layout"></datatable>
+		</div>
+	</div>
+	<div id="R21C2" class="column col-md-8 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="view_process_log_list"  [hidden]="!screen_instance['view_process_log_list'].show" >
 			<datatable [comp_id]="'view_process_log_list'" [screen_instance]="screen_instance" profile_name="p_view_api_failure_layout"></datatable>
 		</div>
