--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_home_dashboard/s_home_dashboard.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_home_dashboard/s_home_dashboard.component.html
@@ -1,4 +1,5 @@
 <div class="s_home_dashboard">
+<p_pl_view_failure_layout [screen_instance]="this" [hidden]="!(current_profile=='p_pl_view_failure_layout')"></p_pl_view_failure_layout>
 <p_pl_req_res_layout [screen_instance]="this" [hidden]="!(current_profile=='p_pl_req_res_layout')"></p_pl_req_res_layout>
 <p_processlog_layout [screen_instance]="this" [hidden]="!(current_profile=='p_processlog_layout')"></p_processlog_layout>
 <p_transaction_list_layout [screen_instance]="this" [hidden]="!(current_profile=='p_transaction_list_layout')"></p_transaction_list_layout>
