--- a/frontend/wp_ng9/custom_widget/npss_cs_rev_get_usable_balance/npss_cs_rev_get_usable_balance.component.html
+++ b/frontend/wp_ng9/custom_widget/npss_cs_rev_get_usable_balance/npss_cs_rev_get_usable_balance.component.html
@@ -1,12 +1,12 @@
 <!--HTML FILE-->
 <section>
 <div>
-    <div class="row custom-row">
+    <!-- <div class="row custom-row">
         <div class="col-md-5">
             <label>PostingRestrictCode</label>
         </div>
         <div class="col-md-5 bank-textbox custom-md-textbox">
-            <input type="text" id="mdCustId"  name="mdCustId" [(ngModel)]="postingRestrictCode" [disabled]="pcode"> <!-- [(ngModel)]="mdCustId" name="mdCustId" #mdCustId="ngModel" [disabled]="mdCustId">-->
+            <input type="text" id="mdCustId"  name="mdCustId" [(ngModel)]="postingRestrictCode" [disabled]="pcode"> 
             
         </div>
     </div>
@@ -15,7 +15,7 @@
             <label>Isinactive</label>
         </div>
         <div class="col-md-5 bank-textbox custom-md-textbox">
-            <input type="text" id="mdPhone" name="mdPhone" [(ngModel)]="isinactive"  [disabled]="pactive"> <!-- [(ngModel)]="mdPhone" name="mdPhone" #mdPhone="ngModel" [disabled]="mdPhone">-->
+            <input type="text" id="mdPhone" name="mdPhone" [(ngModel)]="isinactive"  [disabled]="pactive"> 
             
         </div>
     </div>
@@ -24,25 +24,25 @@
             <label>Signname</label>
         </div>
         <div class="col-md-5 bank-textbox custom-md-textbox">
-            <input type="text" id="mdEmail" name="mdEmail" [(ngModel)]="signname" [disabled]="psignname"> <!-- [(ngModel)]="mdEmail" name="mdEmail" #mdEmail="ngModel" [disabled]="mdEmail">-->
+            <input type="text" id="mdEmail" name="mdEmail" [(ngModel)]="signname" [disabled]="psignname"> 
             
         </div>
-    </div>
+    </div> -->
     <div class="row custom-row">
         <div class="col-md-5">
             <label>Usablebalance</label>
         </div>
         <div class="col-md-5 bank-textbox custom-md-textbox">
-            <input type="text" id="mdBalAcc" name="mdBalAcc" [(ngModel)]="usablebalance" [disabled]="pusbalance" /> <!-- [(ngModel)]="mdBalAcc" name="mdBalAcc" #mdBalAcc="ngModel" [disabled]="mdBalAcc">-->
+            <input type="text" id="mdBalAcc" name="mdBalAcc" [(ngModel)]="usablebalance" [disabled]="pusbalance" />
         </div>
     </div>
-    <div class="row custom-row">
+    <div class="row custom-row" *ngIf = "showVaccounType">
         <div class="col-md-5">
-            <label>Workingbalance</label>
+            <label>VA Account Type</label>
 
         </div>
         <div class="col-md-5 bank-textbox custom-md-textbox">
-            <input type="text" id="mdAccStat" [(ngModel)]="workingbalance" name="mdAccStat" [disabled]="pworkbalance"> <!-- [(ngModel)]="mdAccStat" name="mdAccStat" #mdAccStat="ngModel" [disabled]="mdAccStat">-->
+            <input type="text" id="mdAccStat" [(ngModel)]="vaAccountType" name="mdAccStat" [disabled]="pworkbalance">
         </div>
     </div>
 
@@ -50,14 +50,14 @@
 
    
     
-    <div class="row custom-row">
+    <!-- <div class="row custom-row">
         <div class="col-md-5">
             <label>Real Account Usable Balance</label>
         </div>
         <div class="col-md-5 bank-textbox custom-md-textbox">
-            <input type="text" id="mdShadBal"  name="mdShadBal" [(ngModel)]="raccountbalance" [disabled]="pracctbalance"> <!-- [(ngModel)]="mdShadBal" name="mdShadBal" #mdShadBal="ngModel" [disabled]="mdShadBal">-->
+            <input type="text" id="mdShadBal"  name="mdShadBal" [(ngModel)]="raccountbalance" [disabled]="pracctbalance"> 
         </div>
-    </div>
+    </div> -->
    
 </div>
 </section>
