--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_op_rct_posting_failure/f_navigation_ui/f_navigation_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_op_rct_posting_failure/f_navigation_ui/f_navigation_ui.component.html
@@ -13,6 +13,7 @@
 		<btn [ctrl_id]="'navigation_ui_send_to_maker'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_send_to_maker" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_send_to_maker.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_trg_btn'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_trg_btn" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_trg_btn.show"></btn>
 		<btn [ctrl_id]="'navigation_ui_sec_trg_btn'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_sec_trg_btn" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_sec_trg_btn.show"></btn>
+		<btn [ctrl_id]="'navigation_ui_c_approve'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_ui_c_approve" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_ui_c_approve.show"></btn>
  	</div>
 
 </div>
